# claude-config-manager

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  renderer.js  使用说明.md  启动(开发模式).bat  启动配置管理器.bat  构建发布版.bat
src/: index.html  renderer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
